[package]
name = "popo"
version = "0.1.0"
edition = "2024"
description = "Genrates Poisson disc samples in a polygon"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/mirrajabi/popo"
repository = "https://github.com/mirrajabi/popo"
readme = "README.md"
keywords = ["poisson", "disc", "sampling", "polygon"]
exclude = ["main.rs"]

[dependencies]
fastrand = "2.3.0"
